[package]
name = "math_cat_demo"
version = "0.1.6"
edition = "2018"


[dependencies]
yew = "0.18.0"
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.29"
js-sys = "0.3.35"
futures = "0.3.15"

anyhow = "1"    # dependency in yew was removed 11/11/21, so it will show up one of these days and this can be deleted
error-chain = "0.12.4"
lazy_static = "1.4.0"
regex = "1.5.4"
log = "0.4.0"
console_log = { version = "0.2.0", optional = true }
cfg-if = "1.0"
phf = { version = "0.10.0", features = ["macros"] }

[dependencies.mathcat]
# version = "0.3.1"
# for testing MathCAT without having to publish a new version 
path = "../MathCAT/"


[dependencies.getrandom]
version = "0.2"
features = ["js"]

[features]
default = ["console_log"]
wasm = []

[dependencies.web-sys]
version = "0.3.35"
features = [
    "Document",
    "HtmlInputElement",
    # "HtmlImageElement", # remove after testing example code
    # probably not all of these are needed -- copied from an example
    # "Headers",
    # "Request",
    # "RequestInit",
    # "RequestMode",
    # "Response",
    # "Window",
]

[profile.release]
lto = true  # change to true after debugging
opt-level = "z"  # Optimize for size.

